--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Iain Souttar
 logo: ./Souttar_Iain_14.jpg
-description: Email me at is79 [at] hw.ac.uk
+description: Email me at iain [dot] souttar [at] warwick.ac.uk
 theme: jekyll-theme-minimal
 google_analytics: UA-163359170-1
 
